kubernetes-manifests/redis-slave.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  labels:
    app: redis-slave
spec:
  ports:
  - port: 6379

  selector:
    app: redis-slave
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-slave
  name: redis-slave
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-slave
  template:
    metadata:
      labels:
        app: redis-slave
    spec:
      containers:
      - image: redis
        name: redis
        command: 
        - bash
        - -c
        - redis-server --slaveof $(REDIS_MASTER_HOST) $(REDIS_PORT)
