kubernetes-manifests/web-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
  labels:
    app: web-server
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  ports:
  - port: 8085
  selector:
    app: web-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-server
  name: web-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
      - image: quay.io/myafk/interactive:stable
        name: web-server
        command: ["interactive", "ingress"]
        ports:
        - containerPort: 8085
